<resources>
    <string name="app_name">Signal Mapper</string>
    <string name="fill_demographics">Please fill out your demographics</string>
    <string name="occupation">Occupation</string>
    <string name="age">Age</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="personal_details">Please fill out your personal details.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="password_detailed">Password (you will need this password if you want to have access to your connectivity information online)</string>
    <string name="password_retype">Please retype the password</string>
    <string name="register">Register</string>
    <string name="consent">This application collects location and wireless environment (WiFi) information from the phone. The information is stored on the phone and on the Google Cloud, and the access is granted to the instructors of, and students registered for the Mobile and Ubiquitous Computing class at FRI, Ljubljana, Slovenia, and solely for educational and research purposes. In case the analysis of the data is published. the results will not refer to any single individual and will not reveal participants\' identities. You have the right to uninstall the application at any point, and, if you wish, all the collected data that relates to you will be destroyed. By clicking the \"Register\" button below, you confirm that you have read and understood the above information.</string>
    <string name="occupation_error">Occupation field should not be empty.</string>
    <string name="first_name_error">First name field should not be empty.</string>
    <string name="last_name_error">Last name field should not be empty.</string>
    <string name="age_error">Age should be a positive integer number.</string>
    <string name="password_error">Password has to be between 8 and 16 characters long.</string>
    <string name="password_retype_error">Passwords do not match.</string>
    <string name="email_error">Invalid email.</string>
    <string name="sex_error">Please select your sex.</string>
    <string name="map">Map</string>
    <string name="summary">Summary</string>
    <string name="settings">Settings</string>
    <string name="click_photo">Click on the photo to activate the camera.</string>
    <string name="change_sampling_settings">You can change sampling settings here.</string>
    <string name="change_sampling_interval">Sampling interval (minutes):</string>
    <string name="confirm">Confirm</string>
    <string name="average_rssi_home">Average RSSI at home:</string>
    <string name="average_rssi_work">Average RSSI at work:</string>
    <string name="strongest_wifi_aps">Strongest WiFi APs:</string>
    <string name="sampling_interval_error">Sampling interval must be a positive integer.</string>
</resources>
